--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,5 +1,48 @@
-.App {
+.app {
+  display: flex;
+  min-height: 100vh;
+}
+
+.navigation {
+  width: 15%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 20px;
+  justify-content: center;
+  background-color: cornflowerblue;
+}
+
+.navigation-item__link {
+  font-size: 20px;
+  font-weight: 600;
+  color: aliceblue;
+  cursor: pointer;
+  padding: 5px 10px;
+  text-decoration: none;
+}
+
+.navigation-item--active .navigation-item__link {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+
+.navigation-item__link:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.navigation__item {
+  margin-bottom: 20px;
+}
+
+.app-container {
   width: 80%;
   margin: 0 auto;
   padding-top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.basket {
+  flex-grow: 1;
 }
