--- a/src/app/screens/Molecules/styles.css
+++ b/src/app/screens/Molecules/styles.css
@@ -1,9 +1,6 @@
 .molecules__list {
   display: flex;
   flex-wrap: wrap;
-  margin: 0;
-  padding: 0;
-  list-style: none;
 }
 
 .molecules__item {
@@ -17,6 +14,10 @@
   padding: 10px;
   cursor: pointer;
   position: relative;
+}
+
+.molecules-item:hover {
+  box-shadow: 0px 0px 8px 4px rgba(34, 60, 80, 0.2);
 }
 
 .molecules-item::before {
@@ -52,11 +53,4 @@
 .molecules-item__info-row {
   display: block;
   margin-bottom: 3px;
-}
-
-.molecules-item__title {
-  /* font-size: 18px;
-  font-weight: 600; */
-  margin: 0;
-  margin-bottom: 10px;
 }
