--- a/src/app/components/AppBtn/styles.css
+++ b/src/app/components/AppBtn/styles.css
@@ -6,9 +6,10 @@
   border: none;
   cursor: pointer; 
   color: white;
+  background-color: cornflowerblue;
 }
 
 .app-button:hover {
-  background-color: burlywood;
+  /* background-color: cornflowerblue; */
   box-shadow: 0px 0px 8px 4px rgba(34, 60, 80, 0.2);
 }
