--- a/src/app/App.css
+++ b/src/app/App.css
@@ -10,9 +10,7 @@
   align-items: center;
   width: 80%;
   margin: 0 auto;
-  padding-top: 30px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 30px 20px;
   flex-grow: 1;
   
   /* height: 100%; */
