--- a/src/app/screens/Molecules/styles.css
+++ b/src/app/screens/Molecules/styles.css
@@ -1,6 +1,7 @@
 .molecules__list {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 20px;
 }
 
 .molecules__item {
@@ -8,31 +9,21 @@
   margin-bottom: 10px;
 }
 
+.molecules__text {
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 15px;
+}
+
 .molecules-item {
   width: 200px;
   background-color: gainsboro;
   padding: 10px;
-  cursor: pointer;
   position: relative;
 }
 
-.molecules-item:hover {
-  box-shadow: 0px 0px 8px 4px rgba(34, 60, 80, 0.2);
-}
-
-.molecules-item::before {
-  content: "+";
-  display: none;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  /* filter: brightness(1); */
-  transform: translate(-50%, -50%) scale(7);
-  color: cornflowerblue;
-}
-
-.molecules-item:hover::before {
-  display: block;
+.molecules-item__title {
+  margin-bottom: 5px;
 }
 
 .molecules-item__image {
@@ -50,7 +41,24 @@
   object-fit: cover;
 }
 
-.molecules-item__info-row {
-  display: block;
-  margin-bottom: 3px;
+.adding {
+  margin-top: 5px;
+  display: flex;
+}
+
+.adding__button {
+  font-size: 16px;
+  padding: 2px 15px;
+  border: none;
+  box-shadow: none;
+  background-color: rgba(255, 255, 255, 0.8);
+  cursor: pointer;
+}
+
+.adding__button:hover {
+  box-shadow: 0px 0px 4px 2px rgba(34, 60, 80, 0.2);
+}
+
+.adding__count {
+  margin-left: auto;
 }
