--- a/src/app/screens/Salads/styles.css
+++ b/src/app/screens/Salads/styles.css
@@ -12,13 +12,13 @@
 }
 
 .salads__item {
-  width: 200px;
-  height: 200px;
+  width: 220px;
+  /* height: 200px; */
   border: 5px solid burlywood;
   padding: 10px;
   margin-right: 10px;
   margin-bottom: 10px;
-  background: url('./salad.jpg') center ;
+  /* background: url('./salad.jpg') center ; */
   background-size: cover;
   cursor: pointer;
 }
@@ -29,4 +29,25 @@
 
 .salads__item--selected {
   border-color: cornflowerblue;
+}
+
+.salads__item-image {
+  width: 100%;
+  height: 140px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.salads__item-image-pic {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.salads__text {
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 15px;
 }
